tests/reliability/reject/mods/bad_toplevel.keel
println("I run at import time — forbidden")
def helper(); int:
    return 0
